src/test/ui/rfc-2126-extern-in-paths/non-existent-3.rs
#![feature(extern_in_paths)]

use extern::ycrate; //~ ERROR unresolved import `extern::ycrate`

fn main() {}
